# libre_bee

./: Cargo.toml  README.md  bee-build.sh  manifest.yaml
.github/workflows/: cross-prepare.yml  deploy-dryrun.yml  deploy.yml  rust.yml
assets/: commands.txt  info.txt  rules.txt  seven_unique_letter_words.txt  sevenletterwords.py
src/: main.rs
